# napari-ParticleAnnotation

./: .gitignore  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  test.star  tox.ini
ParticleAnnotation/: napari.yaml
ParticleAnnotation/_qt/: _cloud_window_viewer.py  _local_window_viewer.py  _predict.py  _upload.py  cloud_tm_score_3d_viewer.py  cloud_tm_score_3d_viewer_3.py  cloud_tm_score_3d_viewer_7.py  cloud_window_viewer.py  local_tm_score_3d_predict_viewer.py  local_tm_score_3d_viewer.py  local_window_viewer.py  predict.py  upload.py  upload_3d.py  viewer_utils.py  window_viewer.py
ParticleAnnotation/cloud/: _aws_api.py  aws_api.py  aws_api_3d.py  datatypes.py  utils.py
ParticleAnnotation/utils/: _reader.py  export_data.py  load_data.py  pc_sampling.py  scale.py
ParticleAnnotation/utils/model/: active_learning_model.py  utils.py
ParticleAnnotation/utils/viewer/: viewer_functionality.py
napari_ParticleAnnotation/: _version.py  napari.yaml
napari_ParticleAnnotation/_qt/: general.py  window_viewer.py
napari_ParticleAnnotation/utils/: _reader.py  active_learning_model.py  export_data.py  import_data.py  load_data.py
napari_ParticleAnnotation/utils/model/: active_learning_model.py  utils.py
particleannotation/_qt/: cloud_tm_score_3d_viewer_ecoli.py  local_tm_score_3d_viewer_ecoli.py
test_images/ts1/: coordinates.csv  coordinates_sparse.csv  ice_tm.csv
tests/: test_api.py  test_api_3d.py
tests/api/data/models/: topaz_al_model_000.pth
