[metadata]
name = napari-ParticleAnnotation
description = Particle annotation tool for Cryo-EM and Cryo-ET
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SMLC-NYSBC/napari-ParticleAnnotation
author = Robert Kiewisz
author_email = rkiewisz@nysbc.org
license = MIT
license_files =
    LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.10
include_package_data = True
install_requires = file: requirements.txt

[options.extras_require]
testing =
    napari
    pyqt5
    flake8
    pytest
    pytest-cov
    pytest-qt
    tox

[flake8]
max-line-length=120

[options.entry_points]
napari.manifest =
    napari-ParticleAnnotation = napari_ParticleAnnotation:napari.yaml
